--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
     "@supabase/supabase-js": "^2.38.4",
     "africastalking": "^0.7.8",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
